--- a/my-portfolio/index.html
+++ b/my-portfolio/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- put the icon in /public and use a RELATIVE path -->
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dance Photography Portfolio — Martín Jaramillo</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,6 +12,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <!-- IMPORTANT: relative path (no leading slash) -->
+    <script type="module" src="src/main.jsx"></script>
   </body>
 </html>
